# AI-Resume-Analyzer-and-Cover-Letter-Generator

./: .dockerignore  .env_example  .gitignore  Dockerfile  README.md  configs.py  deployment.yaml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
data_models/: models.py
routers/: cover_letter.py
services/: pdf_service.py
services/ai/: ai_service.py  llms.py  prompts.py
static/: app.js  style.css
templates/: index.html
