[project]
name = "ai-cover-letter-writer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-experimental>=0.3.4",
    "langchain-google-genai>=2.1.8",
    "pdfplumber>=0.11.7",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]
